 * Removed config option (html_tags): see new option html_valid_tags
 * Removed config option (register_globals): just check the actual value of the PHP config variable
 * Removed config option (php): this variable containing the file extensions (php3 of php) was only used in config, so do a search and replace if you need it
 * Removed file: proj_user_api.php
 * Renamed file: manage_create_new_user.php to manage_user_create.php
 * Renamed file: manage_create_new_user_page.php to manage_user_create_page.php 
 * Renamed file: report_add.php to bug_add.php
 * Renamed file: report_bug_advanced_page.php to bug_add_advanced_page.php
 * Renamed file: report_bug_page.php to bug_add_page.php
 * Security fix: Mantis no longer relies on register_globals being turned on
 * New config option (project_user_threshold): access level required to add/remove users to/from a project 
 * New config option (manage_user_threshold): access level required to modify/create/delete users

2002.08.23  -  0.17.5
 * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
 * Corrected bug_close.php and bug_close_page.php, which ignored the $g_close_bug_threshold setting.
 * Corrected bug_reopen.php and bug_reopen_page.php, which ignored the $g_reopen_bug_threshold setting.
 * Fixed problems in bug_update_advanced_page.php, bug_update_page.php, view_bug_advanced_page.php and view_bug_page.php which allowed users to view private bugs. It does that icky logout thing again, which will be replaced with a nice message in 0.18.0.
 * Fixed a problem in view_all_bug_page.php which allowed users to see public bugs in private projects when all projects were marked private.

2002.08.19  -  0.17.4a
 * Fixed the fix of the ambigious column problem
 * Fixed the 'second line of defense' against the arbitrary-code-execution vulnerability

2002.08.18  -  0.17.4