@@ -153,6 +153,8 @@ Mantis ChangeLog
  * Removed config option (register_globals): just check the actual value of the PHP config variable
  * Removed config option (php): this variable containing the file extensions (php3 of php) was only used in config, so do a search and replace if you need it
  * Removed file: proj_user_api.php
+ * Renamed config option: allow_bug_delete_access_level to delete_bug_threshold
+ * Renamed config option: bug_move_access_level to move_bug_threshold
  * Renamed file: manage_create_new_user.php to manage_user_create.php
  * Renamed file: manage_create_new_user_page.php to manage_user_create_page.php 
  * Renamed file: report_add.php to bug_add.php
